manifests/web/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: road-to-secure-kubernetes
spec:
  replicas: 3
  selector:
    matchLabels:
      app: road-to-secure-kubernetes
  template:
    metadata:
      labels:
        app: road-to-secure-kubernetes
    spec:
      securityContext:
        runAsGroup: 4444
        runAsUser: 1234
        runAsNonRoot: true
      containers:
      - name: road-to-secure-kubernetes
        image: nsmith5/road-to-secure-kubernetes:5
        securityContext:
          readOnlyRootFilesystem: true
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: 20Mi
            cpu: 100m
          limits:
            memory: 100Mi
            cpu: 300m
